feat: Complete TanStack Query Chrome DevTools with query detail inspection
- Production-ready Chrome extension with real-time query monitoring
- Expandable query details with JSON viewer and error display
- Robust connection management with auto-reconnection
- Framework-agnostic support for React, Vue, Svelte, Angular, Vanilla JS
- Professional DevTools-consistent UI with search and filtering

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microlink/react-json-view": "^1.26.2",
     "@tanstack/query-core": "^5.80.2",
     "@types/chrome": "^0.0.326",
     "react": "^19.1.0",
