--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@microlink/react-json-view": "^1.26.2",
     "@tanstack/query-core": "^5.80.2",
     "@types/chrome": "^0.0.326",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
