--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
   "manifest_version": 3,
   "name": "TanStack Query DevTools",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Chrome DevTools extension for debugging TanStack Query applications. Inspect queries, mutations, and cache state in real-time.",
-  "permissions": [
-    "activeTab"
-  ],
+  "permissions": ["activeTab"],
   "devtools_page": "src/devtools/devtools.html",
   "content_scripts": [
     {
