Add Prettier config and improve extension stability
- Add .prettierrc with 80 character line width
- Update manifest permissions and remove activeTab requirement
- Implement service worker heartbeat to prevent termination
- Remove ping/pong connection health mechanism
- Sort mutations by submission time in ListView
- Update memory-bank submodule and dependencies

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
+  "$schema": "https://json.schemastore.org/chrome-manifest",
   "manifest_version": 3,
   "name": "TanStack Query DevTools",
   "version": "0.6.0",
   "description": "Chrome DevTools extension for debugging TanStack Query applications. Inspect queries, mutations, and cache state in real-time.",
-  "permissions": ["activeTab"],
+  "permissions": ["storage"],
   "devtools_page": "devtools.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_start"
+      "js": ["content.js"]
     }
   ],
   "background": {
