--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["injected.js"],
+      "resources": ["injected.js", "assets/serialization.js"],
       "matches": ["<all_urls>"]
     }
   ],
