--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lucide-react": "^0.540.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
