--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
     "superjson": "^2.2.2",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
