Add browser extension popup UI for TanStack Query DevTools
- Add popup.html entry point and PopupApp component
- Implement usePopupConnection hook for popup-specific state management
- Update manifest.json to register popup interface
- Extend background script to handle popup communication
- Add popup-specific styling and React entry point
- Update state sync and message types to support popup context

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,6 +41,7 @@
       "48": "icon-48-gray.png",
       "128": "icon-128-gray.png"
     },
-    "default_title": "TanStack Query DevTools"
+    "default_title": "TanStack Query DevTools",
+    "default_popup": "popup.html"
   }
 }
