--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
     "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
     "webextension-polyfill": "^0.12.0",
     "zod": "^4.0.17"
   },
