feat: Implement centralized artificial state management for UI feedback
- Added `createArtificialStateManager` to manage loading and error states.
- Updated `useUIState` hook to utilize the artificial state manager for immediate UI feedback.
- Enhanced `injected.ts` to handle cleanup of subscriptions and manage state updates.
- Refactored `PopupApp` to integrate new `usePopupData` hook and pass tab ID to `useUIState`.
- Removed obsolete `state-sync.ts` and `storage-manager.ts` files.
- Introduced new storage management system with tab-scoped storage for isolation.
- Implemented action queue for storage operations to handle asynchronous updates.
- Added cleanup mechanisms for inactive tabs and improved subscription management.
- Updated message types to include icon updates for better communication between scripts.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode main && vite build --mode content",
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier:format": "prettier --write .",
