--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tanstack-query-chrome-devtools",
   "private": true,
-  "version": "0.10.0",
+  "version": "0.11.0",
   "type": "module",
   "description": "TanStack Query DevTools",
   "homepage": "https://github.com/DeeCode-inc/tanstack-query-chrome-devtools#readme",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode main && vite build --mode content",
+    "build": "tsc -b && vite build --mode main && vite build --mode content",
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier:format": "prettier --write .",
