--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tanstack-query-chrome-devtools",
   "private": true,
-  "version": "0.11.0",
+  "version": "0.12.0",
   "type": "module",
   "description": "TanStack Query DevTools",
   "homepage": "https://github.com/DeeCode-inc/tanstack-query-chrome-devtools#readme",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build --mode main && vite build --mode content",
+    "build": "tsc -b && vite build --mode main && vite build --mode content && vite build --mode injected",
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier:format": "prettier --write .",
@@ -31,8 +31,7 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
-    "react-dom": "^19.1.1",
-    "superjson": "^2.2.2",
+    "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "webextension-polyfill": "^0.12.0",
     "zod": "^4.1.11"
